# blake2-wasm

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
